fixing server for login

--- a/LogInPage.html
+++ b/LogInPage.html
@@ -5,8 +5,7 @@
     <title>Login Page By Eyal Maoz</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="all" href="styles.css" />
-    <script src="javaScript.js"></script>
+    <link rel="stylesheet" type="text/css" media="all" href="/styles.css" />
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
