fixing submit for admin admin in login

--- a/LogInPage.html
+++ b/LogInPage.html
@@ -17,6 +17,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <script src="javaScript.js"></script>
 </head>
 
 <body id="LoginBody">
@@ -36,7 +37,7 @@
                         <label for="password ">Password:</label>
                         <input type="password" class=" form-control " id="password " placeholder="Enter password " name="password "> <br>
                         <!-- Login Button-->
-                        <button id="loginBtn " onclick=ValidateText() type="submit " class="btn btn-primary ">Submit</button>
+                        <button type="button" id="loginBtn " onclick=ValidateText() class="btn btn-primary ">Submit</button>
                         <!-- Link -->
                         <p style="color:black;font-size:medium"> Not a user?
                             <a href="SignUpPage.html">Sign-Up</a>
