another try on the mobile

--- a/LogInPage.html
+++ b/LogInPage.html
@@ -26,7 +26,7 @@
     <div class="container">
         <div class=".row" style="padding: 40px;"> </div>
         <div class="row align-items-center">
-            <div class=".col-sm-auto" style="width: device-width;" id="mainDiv">
+            <div class=".col-sm-auto" id="mainDiv">
                 <form autocomplete="off">
                     <!-- Headline-->
                     <h2 style=" text-align:center; ">Login</h2>
