alot of changes for upcoming proj

--- a/ContactPage.html
+++ b/ContactPage.html
@@ -46,7 +46,7 @@
                         <textarea class="form-control" rows="5" id="subject" style="width: 200px;" placeholder="Subject"></textarea><br>
 
                         <!-- sign up Button -->
-                        <button class="btn btn-primary " id="submitBtn" onclick=OnSubmitContact() type="submit" value="Submit" style="font-size:large"> Submit</button>
+                        <button class="btn btn-primary " id="submitBtn" onclick=OnSubmitContact() type="button" value="Submit" style="font-size:large"> Submit</button>
 
                     </div>
                 </form>
