--- a/LogInPage.html
+++ b/LogInPage.html
@@ -40,8 +40,11 @@
                         <!-- Login Button-->
                         <button type="button" id="loginBtn " onclick=ValidateText() class="btn btn-primary ">Submit</button>
                         <!-- Link -->
-                        <p style="color:black;font-size:medium"> Not a user?
-                            <a href="SignUpPage.html">Sign-Up</a>
+                        <p style="color:black;font-size:medium"> Forgot your password?
+                            <a href="">Click Here</a>
+                            <p style="color:black;font-size:medium"> Not a user?
+                                <a href="SignUpPage.html">Sign-Up</a>
+
                     </div>
                 </form>
         </div>
