--- a/SignUpPage.html
+++ b/SignUpPage.html
@@ -37,10 +37,10 @@
                         <input type="password" class="form-control " id="password" placeholder="Password" style="font-size:large"><br>
                         <input type="password" class="form-control " id="confPassword" placeholder="Confirm Password" style="font-size:large"><br>
                         <!-- sign up Button -->
-                        <button class="btn btn-primary " id="signBtn" onclick=OnSignUp() type="submit" value="Sign up" style="font-size:large"> Sign Up</button>
+                        <button class="btn btn-primary " id="signBtn" onclick=OnSignUp() type="button" value="Sign up" style="font-size:large"> Sign Up</button>
                         <!-- Link -->
                         <p style="color:black;font-size:medium"> Already a user?
-                            <a href="LoginPage.html">Login</a>
+                            <a href="\">Login</a>
 
                         </p>
                     </div>
