--- a/SignUpPage.html
+++ b/SignUpPage.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Sign Up Page</title>
+    <title>Sign Up</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="all" href="styles.css" />
